gccida/g1/find_base_term
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1702:4: error: expected ';' after expression
rtx base_term; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1702:5: error: use of undeclared identifier 'base_term'
rtx base_term; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1721:32: error: expected ')'
result = find_base_term( ( rtx)v3[1]); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1721:24: note: to match this '('
result = find_base_term( ( rtx)v3[1]); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1748:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = (  struct rtx_def *)result[1]; 
                         ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1761:1: error: use of undeclared identifier 'base_term'
base_term = find_base_term( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1763:7: error: use of undeclared identifier 'base_term'
if ( !base_term ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1765:38: error: use of undeclared identifier 'base_term'
if ( ( unsigned __int16)( *( _WORD *)base_term - 67) <= 1u ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1766:8: error: use of undeclared identifier 'base_term'
return base_term; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1767:17: error: use of undeclared identifier 'base_term'
if ( *( _WORD *)base_term == 25 && *( ( _BYTE *)base_term + 2) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1767:49: error: use of undeclared identifier 'base_term'
if ( *( _WORD *)base_term == 25 && *( ( _BYTE *)base_term + 2) ) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1768:8: error: use of undeclared identifier 'base_term'
return base_term; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/alias.c:1784:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)result[1]; 
               ^~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_base_term/src/obj/alias.o] Error 1
